--- a/Index.html
+++ b/Index.html
@@ -210,16 +210,18 @@
         <h1 class="heading">Projects</h1>
         <div class="row">
             <div class="box">
-                <img src="C:\Users\jccab\OneDrive\Pictures\Screenshots\403703852_364794625944681_4182774332176221030_n.jpg" alt="">
+                <img src="p3.jpg" alt="">
+                 <h3 class="heading">Joshua's</h3>
                 <h1 class="heading">GitHub Projects</h1>
                 <p><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
                 <p><a href="https://github.com/Opop29/singlePage_Application.git" target="_blank">https://github.com/Opop29/singlePage_Application.git</a></p>
             </div>
     
             <div class="box">
-                <img src="C:\Users\jccab\OneDrive\Pictures\Saved Pictures\409373152_327208393586609_6104264507763256395_n (1).jpg" alt="">
+                <img src="p4.jpg" alt="">
+                  <h3 class="heading">Elai mea</h3>
                 <h1 class="heading">GitHub Projects</h1>
-                <p><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
+                <p class="heading"><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
                 <p><a href="https://github.com/Opop29/singlePage_Application.git" target="_blank">https://github.com/Opop29/singlePage_Application.git</a></p>
             </div>
         </div>
