--- a/Index.html
+++ b/Index.html
@@ -213,7 +213,12 @@
                 <img src="p3.jpg" alt="">
                  <h3 class="heading">Joshua's</h3>
                 <h1 class="heading">GitHub Projects</h1>
-                <p><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
+                <br>
+                <br>
+                <br>
+
+                <p><a href="https://opop29.github.io/html-webpage/" target="_blank">html-webpage</a></p>
+               <p><a href="https://opop29.github.io/it23-bouncing-ball/">it23-bouncing-ball</a></p>
                 <p><a href="https://github.com/Opop29/singlePage_Application.git" target="_blank">https://github.com/Opop29/singlePage_Application.git</a></p>
             </div>
     
@@ -221,7 +226,10 @@
                 <img src="p4.jpg" alt="">
                   <h3 class="heading">Elai mea</h3>
                 <h1 class="heading">GitHub Projects</h1>
-                <p class="heading"><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
+                 <br>
+                <br>
+                <br>
+                <p ><a href="https://github.com/Opop29/html-webpage.git" target="_blank">https://github.com/Opop29/html-webpage.git</a></p>
                 <p><a href="https://github.com/Opop29/singlePage_Application.git" target="_blank">https://github.com/Opop29/singlePage_Application.git</a></p>
             </div>
         </div>
