--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
         <h1 class="heading">ABOUT Joshua</h1>
         <div id="pic">
            
-            <img src="1.png" alt="">
+            <img src="p.jpg.jpg" alt="">
             <div id="intro">
                 <h2>Joshua Quidit</h2>
                 <p>Hello! My name is Joshua Quidit, and I'm 20 years old. I am passionate about Developing A Game. Currently, I study in the field of Computer Studies. Here's a bit more about me:</p>
@@ -102,7 +102,7 @@
         <h1 class="heading">ABOUT Elaiza Mae </h1>
         <div id="pic">
            
-            <img src="C:\Users\jccab\OneDrive\Pictures\Saved Pictures\409373152_327208393586609_6104264507763256395_n (1).jpg" alt="">
+            <img src="eliza1.jpg" alt="">
             <div id="intro">
                 <h2>Elaiza Mae Bayoc </h2>
                 <p>Hello! My name is Elaiza Mae Bayoc, and I'm 21 years old. I am passionate about Designing. Currently, I study in the field of Computer Science. Here's a bit more about me:</p>
@@ -125,10 +125,11 @@
     </section>
 
 <section id="resume">
-  
+  <section  id="joshua-resume" class="active">
   <div class="buttonsR">
     <button onclick="showJoshuaResume()">View Resume</button>
   </div>
+</section>
 
     <section id="joshua-resume" class="active">
         <header class="heading">
@@ -185,7 +186,7 @@
             <p>Phone: 09618275493</p>
             <button onclick="showJoshuaResume()">Joshua's Resume</button>
         </div>
-    </section> 
+    </section>
 </section>
 
 
