add_infprmation_education

--- a/Index.html
+++ b/Index.html
@@ -134,11 +134,16 @@
     <section id="joshua-resume" class="active">
         <header class="heading">
             <h1>Joshua Quidit</h1>
-            <p>Web Developer</p>
+            <p>Game Developer</p>
+            <p>Joshuaquidit123456@gmail.com</p>
         </header>
  
         <h2>Education</h2>
+        <br>
         <ul>
+            <li><strong>Cugman Elementary School</strong></li>
+            <li><strong>Cugman National High School</strong> - junior high</li>
+            <li><strong>cugman National High School</strong> - HUMSS_senior High </li>
             <li><strong>Northern Bukidnon State College</strong> - Bachelor of Science and Information Technologies</li>
         </ul>
     
